--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Navigation map</string>
-    <string name="mapbox_access_token" translatable="false">MAPBOX_ACCESS_TOKEN_HERE</string>
+    <string name="mapbox_access_token" translatable="false">sk.eyJ1Ijoic2hlcmxvY2syMDQ1IiwiYSI6ImNrdjlrcjVmbDJhd3AydXMzZ2VtaW5la2MifQ.8jJ6eEp00D7yZuQ0JVRa2A</string>
     <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
 </resources>
